# CapCut-Mate---Dub-Studio

./: .gitignore  Dockerfile  LICENSE  README.md  build_exe.py  check_coverage.py  clean_analysis.py  config.py  exceptions.py  fix_render.py  fix_segments.py  imp.py  main.py  pyflakes_output.txt  pyflakes_render.txt  pyproject.toml  run_analysis.py  run_render.py  settings.json  test_render.py
config/: copywriting_hooks_db.json  copywriting_patterns.json  custom_cloud_voices.json  custom_omnivoice_voices.json  huazi.json  sticker.json
gui/: config.py  controller.py  main.py  main_window.py  preview_canvas.py  updater.py  utils.py  video_preview_widget.py
tests/: test_add_audios.py  test_add_captions_text_effect.py  test_add_images.py  test_add_masks.py  test_add_videos_concurrent.py  test_add_videos_duration.py  test_all_text_effects.py  test_caption_keywords.py  test_caption_transform.py  test_caption_transform_fix.py  test_chinese_encoding_fix.py  test_ci_dependencies.py  test_cross_platform.py  test_draft_service.py  test_dub_studio_pipeline_localization.py  test_dub_studio_process_utils.py  test_dub_studio_tts_text_prep.py  test_export_error_handling.py  test_file_operations.py  test_float_transform.py  test_get_audio_duration_api.py  test_get_text_effects.py  test_latest_commit_features.py  test_logic_validation.py  test_middleware.py  test_transform_coordinate_fix.py  test_video_duration_extension.py  test_video_transform.py  test_video_transform_fix.py
tools/: backtest_intonation.py  douyin_api_downloader.py  dub_studio_pipeline.py  dub_vietsub_pipeline.py  (+8 more)
(+173 files in other folders)
