[project]
name = "capcut-mate"
version = "1.0.0"
description = "CapCut Mate API Service"
authors = [
    { name = "Hommy", email = "longro0211vn147@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "email-validator>=2.2.0",
    "edge-tts>=7.0.2",
    "fastapi>=0.100.0",
    "PyQt6>=6.7.1",
    "pymediainfo>=7.0.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
    "cos-python-sdk-v5>=1.9.38",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
desktop_ui = [
    "qtawesome>=1.3.1",
    "qt-material>=2.17",
    "superqt>=0.6.7",
]
ai_local = [
    "hyperpyyaml>=1.2.2",
    "librosa>=0.10.2",
    "loguru>=0.7.3",
    "onnxruntime>=1.22.1",
    "soundfile>=0.13.1",
    "torchaudio>=2.8.0",
    "valtec-tts @ git+https://github.com/tronghieuit/valtec-tts.git",
    "omnivoice",
]
windows = [
    "pywin32>=311; sys_platform == 'win32'",
    "pyautogui>=0.9.54; sys_platform == 'win32'",
    "uiautomation>=2.0.29; sys_platform == 'win32'",
]

[tool.pyright]
include = [
    ".",
]
extraPaths = [
    ".",
    "src",
]
